--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
 
         <section>
-
+            <h1>This is another section</h1>
         </section>
 
         <section class="grid grid-cols-1 md:grid-cols-2 gap-5">
